utlizando propriedade sticky para deixar o header fixo e z-index para ficar por cima de outros elementos

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@
   justify-content: flex-start; 
   align-items: center; 
   box-shadow: 8px 8px 8px 8px rgba(0, 0, 0, 0.4); 
+  position: sticky; 
+  top: 0px;  
+  z-index: 100000; 
 }
 
 .heroisTitle {
